fixed the broken layout of barchart on new browser

--- a/css/JBondSite.css
+++ b/css/JBondSite.css
@@ -167,3 +167,9 @@ font-size:10px;
    
     
 } */
+#bondlayout .bond{
+  margin-bottom: 30px;
+}
+#bondlayout .bond .span1.profile-pic {
+  height:100%;
+}
